Rettet opp litt logikkfeil for når en notifikasjon skal sendes ut for inaktive medlemmer.